--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 <div  style="background-color: black;" class="col-lg-6 col-xl-5">
                     <div class="text-container">
                         <h1 style="color:#ffd103;margin-top: 5%;">Verificăm mașini înainte de a le cumpăra tu!</h1>
-                        <h4 style="color:white" class="p-large">Vrei să cumperi o masină și nu sti dacă este "sămsărită",vrei pe cineva care să îți spună:"Da,merită să o cumperi sau nu!"</h4>
+                        <h4 style="color:white" class="p-large">Vrei să cumperi o masină și nu sti daca merită sau nu să o cumperi. Noi îți spunem dacă are probleme sau o poți achizitiona</h4>
                         <h3 style="color:#ffd103">20 ANI EXPERIENȚĂ în mecanică auto</h3>
                         <li style="color:white">Ne dăm seama daca masina a avut accidente</li>
                         <li style="color:white">Dacă există scurgeri,probleme mecanice</li>
