--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<meta name="twitter:card" content="summary_large_image"> <!-- to have large image post format in Twitter -->
 
     <!-- Webpage Title -->
-    <title>Alfy Webpage Title</title>
+    <title>Verificare masini înainte de cumpărare</title>
     
     <!-- Styles -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -89,7 +89,8 @@
                 <div  style="background-color: black;" class="col-lg-6 col-xl-5">
                     <div class="text-container">
                         <h1 style="color:#ffd103;margin-top: 5%;">Verificăm mașini înainte de a le cumpăra tu!</h1>
-                        <h4 style="color:white" class="p-large">Vrei să cumperi o masină și nu sti daca merită sau nu să o cumperi. Noi îți spunem dacă are probleme sau o poți achizitiona</h4>
+                        <h4 style="color:white" class="p-large">Verificăm mașini înainte de a le cumpăra tu!
+<br>Noi îți spunem dacă masina are probleme sau o poți achizitiona</h4>
                         <h3 style="color:#ffd103">20 ANI EXPERIENȚĂ în mecanică auto</h3>
                         <li style="color:white">Ne dăm seama daca masina a avut accidente</li>
                         <li style="color:white">Dacă există scurgeri,probleme mecanice</li>
@@ -232,13 +233,13 @@
                     </div> <!-- end of footer-col -->
                     <div class="footer-col third">
                         <span class="fa-stack">
-                            <a href="#your-link">
+                            <a href="https://www.facebook.com/verificaremasini">
                                 <i class="fas fa-circle fa-stack-2x"></i>
                                 <i class="fab fa-facebook-f fa-stack-1x"></i>
                             </a>
                         </span>
                         <span class="fa-stack">
-                            <a href="#your-link">
+                            <a href="https://www.instagram.com/verificare.masini/">
                                 <i class="fas fa-circle fa-stack-2x"></i>
                                 <i class="fab fa-instagram fa-stack-1x"></i>
                             </a>
