--- a/index.html
+++ b/index.html
@@ -97,13 +97,14 @@
                         <li style="color:white">Observăm kilometrii dați înapoi</li>
                         <!-- Sign Up Form -->
                          <h5 style="color:#ffd103">PREȚURI: 200-450 lei in functie de adresa unde este masina</h5>
-                        <form style="margin-top: 5%;">
+                        <form  action="https://formspree.io/f/xnqlgpjg"
+  method="POST" style="margin-top: 5%;">
                             <div class="form-group">
-                                <input  placeholder="Email" type="text" class="form-control-input" id="semail" >
-                                <input style="margin-top: 10px;" placeholder="Telefon" type="text" class="form-control-input" id="telefon" >
-                                 <input style="margin-top: 10px;" placeholder="Marcă,model,an masină" type="text" class="form-control-input" id="masina" >
-                                  <input style="margin-top: 10px;" placeholder="Localitatea unde e masina" type="text" class="form-control-input" id="localitate" >
-                                   <input  style="margin-top: 10px;"placeholder="Informatii aditionale" type="text" class="form-control-input" id="informatii" >
+                                <input  placeholder="Email" type="text" class="form-control-input" id="semail" name="email" >
+                                <input style="margin-top: 10px;" placeholder="Telefon" type="text" class="form-control-input" id="telefon" name="telefon" >
+                                 <input style="margin-top: 10px;" placeholder="Marcă,model,an masină" type="text" class="form-control-input" id="masina" name="model_masina" >
+                                  <input style="margin-top: 10px;" placeholder="Localitatea unde e masina" type="text" class="form-control-input" id="localitate" name="adresa_masina" >
+                                   <input  style="margin-top: 10px;"placeholder="Informatii aditionale(VIN-ul daca il aveti)" type="text" class="form-control-input" id="informatii" name="informatii_aditionale" >
                                  <button style="margin-top: 10px;" type="submit" class="form-control-submit-button">PROGRAMEAZĂ-TE</button>
                             </div>
                            
