--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                         <li style="color:white">Dacă există scurgeri,probleme mecanice</li>
                         <li style="color:white">Observăm kilometrii dați înapoi</li>
                         <!-- Sign Up Form -->
-                         <h5 style="color:#ffd103">PREȚURI: 200-450 lei in functie de adresa unde este masina</h5>
+                         <h5 style="color:#ffd103;margin-top:5%;">PREȚURI: 200-400 lei in functie de modelul masinii</h5>
                         <form  action="https://formspree.io/f/xnqlgpjg"
   method="POST" style="margin-top: 5%;">
                             <div class="form-group">
@@ -132,7 +132,7 @@
                                 <input style="margin-top: 10px;" placeholder="Telefon" type="text" class="form-control-input" id="telefon" name="telefon" >
                                  <input style="margin-top: 10px;" placeholder="Marcă,model,an masină" type="text" class="form-control-input" id="masina" name="model_masina" >
                                   <input style="margin-top: 10px;" placeholder="Localitatea unde e masina" type="text" class="form-control-input" id="localitate" name="adresa_masina" >
-                                   <input  style="margin-top: 10px;"placeholder="Informatii aditionale(VIN-ul daca il aveti)" type="text" class="form-control-input" id="informatii" name="informatii_aditionale" >
+                                   <input  style="margin-top: 10px;"placeholder="VIN-ul daca il aveti(optional)" type="text" class="form-control-input" id="informatii" name="informatii_aditionale" >
                                  <button style="margin-top: 10px;" type="submit" class="form-control-submit-button">PROGRAMEAZĂ-TE</button>
                             </div>
                            
@@ -150,7 +150,7 @@
          
 
                     <h3 style="color:#ffd103" style="color:white">Despre noi</h3>
-                <p style="color:white">Suntem o echipă de memacini,ingineri cu experiență de peste 20 ani capabili să "mirosim" orice tentativă a unui samsar </p>
+                <p style="color:white">Suntem o echipă de  mecanici,electro-mecanici,ingineri-auto cu experiență de peste 20 ani capabili să "mirosim" orice tentativă a unui samsar. <br>Am ales sa nu iesim in pensie ci sa ajutam oamenii sa aleaga o masina potrivita fara probleme.<br>Vedem modelul masinii si stim ca la acel model ar putea aparea urmatoarele probleme, le verificam, iar apoi verificam toata subansamblele masinii pentru a va oferi un raspuns exact si concis. </p>
         </div> <!-- end of container -->
     </header> <!-- end of header -->
     <!-- end of header -->
