--- a/index.html
+++ b/index.html
@@ -151,6 +151,9 @@
 
                     <h3 style="color:#ffd103" style="color:white">Despre noi</h3>
                 <p style="color:white">Suntem o echipă de  mecanici,electro-mecanici,ingineri-auto cu experiență de peste 20 ani capabili să "mirosim" orice tentativă a unui samsar. <br>Am ales sa nu iesim in pensie ci sa ajutam oamenii sa aleaga o masina potrivita fara probleme.<br>Vedem modelul masinii si stim ca la acel model ar putea aparea urmatoarele probleme, le verificam, iar apoi verificam toata subansamblele masinii pentru a va oferi un raspuns exact si concis. </p>
+                 <h3 style="color:#ffd103" style="color:white">Contact</h3>
+                <p style="color:white">Ne puteti intreba orice si telefonic sau pe verificaremasinicontact@gmail.com </p>
+                <h4>+40 767 503 706</h4>
         </div> <!-- end of container -->
     </header> <!-- end of header -->
     <!-- end of header -->
