--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
 
             <!-- Image Logo -->
             <a class="navbar-brand logo-image" href="index.html"><img src="images/logo.png" alt="alternative"></a> 
+           <a href="tel:+40767503706"> <p style="color:#ffd103"> +40767503706</p></a>
 
             <!-- <button style="background-color: white;" class="navbar-toggler p-0 border-0" type="button" data-toggle="offcanvas">
                 <span class="navbar-toggler-icon"></span>
@@ -153,7 +154,7 @@
                 <p style="color:white">Suntem o echipă de  mecanici,electro-mecanici,ingineri-auto cu experiență de peste 20 ani capabili să "mirosim" orice tentativă a unui samsar. <br>Am ales sa nu iesim in pensie ci sa ajutam oamenii sa aleaga o masina potrivita fara probleme.<br>Vedem modelul masinii si stim ca la acel model ar putea aparea urmatoarele probleme, le verificam, iar apoi verificam toata subansamblele masinii pentru a va oferi un raspuns exact si concis. </p>
                  <h3 style="color:#ffd103" style="color:white">Contact</h3>
                 <p style="color:white">Ne puteti intreba orice si telefonic sau pe verificaremasinicontact@gmail.com </p>
-                <h4>+40 767 503 706</h4>
+                <h4 style="color:#ffd103">+40 767 503 706</h4>
         </div> <!-- end of container -->
     </header> <!-- end of header -->
     <!-- end of header -->
