--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                     <div class="text-container">
                         <h1 style="color:#ffd103;margin-top: 5%;">Verificăm mașini înainte de a le cumpăra tu!</h1>
                         <h4 style="color:white" class="p-large">Verificăm mașini înainte de a le cumpăra tu!
-<br>Noi îți spunem dacă masina are probleme sau o poți achizitiona</h4>
+<br>Noi îți spunem dacă masina are probleme sau merită să o cumperi,mergem sa vedem masina la fata locului</h4>
                         <h3 style="color:#ffd103">20 ANI EXPERIENȚĂ în mecanică auto</h3>
                         <li style="color:white">Ne dăm seama daca masina a avut accidente</li>
                         <li style="color:white">Dacă există scurgeri,probleme mecanice</li>
@@ -134,7 +134,7 @@
                                  <input style="margin-top: 10px;" placeholder="Marcă,model,an masină" type="text" class="form-control-input" id="masina" name="model_masina" >
                                   <input style="margin-top: 10px;" placeholder="Localitatea unde e masina" type="text" class="form-control-input" id="localitate" name="adresa_masina" >
                                    <input  style="margin-top: 10px;"placeholder="VIN-ul daca il aveti(optional)" type="text" class="form-control-input" id="informatii" name="informatii_aditionale" >
-                                 <button style="margin-top: 10px;" type="submit" class="form-control-submit-button">PROGRAMEAZĂ-TE</button>
+                                 <button style="margin-top: 10px;" type="submit" class="form-control-submit-button">CERE OFERTĂ</button>
                             </div>
                            
                         </form>
